# OpenCVTest

./: CMakeLists.txt  removeRedEyes.cpp
